--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</div>
 				<div class="slide">
 					<div class="slide__img-wrap">
-						<div class="slide__img" style="background-image: url(img/22.jpg);"></div>
+						<div class="slide__img" style="background-image: url(img/22.JPG);"></div>
 					</div>
 					<div class="slide__side">Random Roam</div>
 					<div class="slide__title-wrap">
@@ -81,7 +81,7 @@
 				</div>
 				<div class="slide">
 					<div class="slide__img-wrap">
-						<div class="slide__img" style="background-image: url(img/33.jpg);"></div>
+						<div class="slide__img" style="background-image: url(img/33.JPG);"></div>
 					</div>
 					<div class="slide__side">Arbitrary Words</div>
 					<div class="slide__title-wrap">
@@ -92,7 +92,7 @@
 				</div>
 				<div class="slide">
 					<div class="slide__img-wrap">
-						<div class="slide__img" style="background-image: url(img/44.jpg);"></div>
+						<div class="slide__img" style="background-image: url(img/44.JPG);"></div>
 					</div>
 					<div class="slide__side">Haunted Drift</div>
 					<div class="slide__title-wrap">
@@ -103,7 +103,7 @@
 				</div>
 				<div class="slide">
 					<div class="slide__img-wrap">
-						<div class="slide__img" style="background-image: url(img/55.jpg);"></div>
+						<div class="slide__img" style="background-image: url(img/55.JPG);"></div>
 					</div>
 					<div class="slide__side">Fun Diverge</div>
 					<div class="slide__title-wrap">
@@ -114,7 +114,7 @@
 				</div>
 				<div class="slide">
 					<div class="slide__img-wrap">
-						<div class="slide__img" style="background-image: url(img/66.jpg);"></div>
+						<div class="slide__img" style="background-image: url(img/66.JPG);"></div>
 					</div>
 					<div class="slide__side">Hopes &amp; Dreams</div>
 					<div class="slide__title-wrap">
